beginning to stack column layout of top section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,9 @@ a {
     display: flex;
     flex-direction: column;
 }
+
+h3 {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+}
