--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,11 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
-    align-content: center;
-    background-color: #800e13;
+    align-items: center;
+    background-color: #1f2937;
+    padding-left: 80px;
+    padding-right: 80px;
+
 }
 
 ul {
@@ -28,28 +31,46 @@ ul {
 
 a {
     text-decoration: none;
-    color: white;
+    color: #e5e7eb;
+    font-size: 18px;
+    font-weight: 100;
+}
+
+div {
+    color: #e5e7eb;
     font-size: 18px;
     font-weight: 100;
 }
 
 .group-1 {
     display: flex;
+    justify-content: space-between;
+    background-color: #1f2937;
+    padding: 80px;
+    gap: 80px;
+}
+
+h3 {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+    padding: 0;
+    margin: 0;
 }
 
 button {
-    background-color: #d03943;
+    background-color: #3882f6;
     color: white;
     font-size: 15px;
     font-weight: 800;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 40px;
+    padding-right: 40px;
     border-radius: 10px;
-    border-width: 2px;
-    border-color: white;
+    border-width: 0px;
     border-style: solid;
+    margin-top: 10px;
 }
 
 .group-4 {
@@ -66,4 +87,16 @@ button {
     align-items: center;
     background-color: #800e13;
     padding: 20px;
+}
+
+h5 {
+    font-size: 24px;
+    color: #f9faf8;
+}
+
+.img-1 {
+    background-color: #e5e7eb;
+    opacity: .3;
+    width: 800px;
+    height: auto;
 }
